--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -5,7 +5,7 @@
   .wrapper.m-page.scene_element.scene_element--fadeinup
     %aside
       %h2 R&eacute;sum&eacute;
-      %a.button.outline{href: '../jkellum-resume-2016.pdf', :target => '_blank'}
+      %a.button.outline{href: '../jkellum-resume-2017.pdf', :target => '_blank'}
         %i.ion-ios7-download
         PDF R&eacute;sum&eacute;
     %article
@@ -34,10 +34,15 @@
           %li Sketch 3 / Adobe Creative Suite
           %li HAML / SASS / BEM / CSS Frameworks
           %li React / Ruby / Rails / JQuery / PHP
-          %li GitHub / Command Line / Rspec Testing
+          %li Git / Command Line / Rspec Testing
           %li Lean-Startup Methods / Agile Development
       %figure
         %h2 Experience
+        %dl
+          %h3 BookheadEd Learning, LLC
+          %h4 Senior UX Design/Developer
+          %h6 Sep. 2016 &ndash; Current | Jacksonville, FL
+          %p Provides design, development, and maintenance for the software and systems behind the company’s products.
         %dl
           %h3 Ignite by Adecco
           %h4 UX / UI Designer
@@ -61,7 +66,6 @@
           %p Responsible for all aspects of Spinnaker Digital publications and management: web services, editorial content, art and design, advertising, budget and personnel.
           %h4 Lead Digital Designer
           %p Designed WordPress theme for the Spinnaker’s 2012 site relaunch.
-          %p Attended the 2012 Associated Collegiate Press National College Media Convention in Chicago, IL.
         %dl
           %h3 Brown Dog Creative
           %h6 Feb. 2013 &ndash; Jul. 2013 | Jacksonville, FL
