--- a/source/shared/_navigation.haml
+++ b/source/shared/_navigation.haml
@@ -9,11 +9,9 @@
     %section
       = image_tag('jason-aiga-200x200.jpg')
       %h2 Jason Kellum
-      %p UX / UI / Product Designer
       %p
-        Currently in the market for a full-time
-        %a{:href => 'https://www.youtube.com/watch?v=Tfi8fT9oHkQ', :target => '_blank'}gig
-        &period;
+        Senior UX Design/Developer @
+        %a{:href => 'http://www.studysync.com/', :target => '_blank'}StudySync
       %ul
         %li
           %a{:href => '/'}
